# model

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README_TEMPLATE.md  baseline_stats.json  check_pipeline_integrity.py  current_stats.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  generate_readme.py  gui.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run_tests.py  save_dummy_eval_artifacts.py  setup.py  temp_register_models.py
.github/workflows/: ci.yml
api/: controllers.py  models.py
config/: dev.json  dummy_engineer_features_config.json  dummy_evaluate_config.json  dummy_evaluate_config_with_shap.json  dummy_train_xgb_config.json  prod.json  test.json
data/processed/: dummy_features_for_train_test.csv
data_eval_test/: dummy_test_data.csv
docs/: api.md  architecture.mermaid.md  plugin_architecture.md
docs/deployment/: docker_deployment.md  mlflow_tracking.md
docs/guides/: 01_developer_guide.md  02_model_management.md  03_feature_analysis.md  04_evaluation_and_reporting.md
docs/modules/: api_reference.md  data_ingestion.md  feature_engineering.md  modeling.md
docs/sections/: 00_overview.md  01_features.md  02_setup.md  03_usage_gui.md  04_usage_cli.md  05_usage_api.md  06_examples.md  07_architecture.md  08_roadmap.md  09_changelog.md  10_contributing.md  11_license.md
docs/setup/: gpu_cpu_support.md  os_specific_setup.md
docs/workflows/: workflow_example_1.md
logs/: .gitkeep
models/: .gitkeep  final_readme_model.meta.json  model_registry.jsonl  sample_model.joblib  sample_model.meta.json
models/LSTMTest/v20230103000000_ghi789/: model.meta.json
models/XGBoostTest/v20230101000000_abc123/: model.meta.json
models/XGBoostTest/v20230102000000_def456/: model.meta.json
notebooks/: 01_baseline_model_training.ipynb  02_advanced_modeling.ipynb
scripts/: generate_api_docs.py  generate_changelog.py  generate_cli_docs.py
src/: __init__.py  backtesting.py  cli_monitor.py  config.py  config_models.py  data_management.py  evaluation.py  exceptions.py  feature_analysis.py  feature_engineering.py  feature_selection.py  fundamental_data.py  metadata_utils.py  model_registry_utils.py  modeling.py  pipeline_utils.py  sentiment_analysis.py  tuner.py  utils.py
templates/: new_feature_pipeline_template.py  new_model_template.py  new_strategy_template.py
tests/: test_config.py  test_data_management.py  test_example.py  test_gui_cli_integration.py  test_model_registry_utils.py
